<resources>
    <string name="app_name">WeatherApp</string>
    <string name="today">Today</string>

    <string name="settings">Settings</string>
    <string name="enter_your_zip_code">Enter your zip code</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="units">Units</string>
    <string name="zip">Zip</string>
    <string name="submit">Submit</string>
    <string name="temporary">temporary</string>
</resources>