<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView android:id="@+id/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="14dp"
    android:elevation="14dp"
    android:layout_margin="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/settings"
            android:textSize="30sp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zip"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/et_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_zip_code"
            android:inputType="number"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/units"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            />
        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/rb_fahrenheit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/fahrenheit" />

            <RadioButton
                android:id="@+id/rb_celsius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/celsius" />

            <RadioButton
                android:id="@+id/rb_kelvin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kelvin"
                />
        </RadioGroup>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>

